--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
         <tr>
           <td>
             <h1 style="margin-bottom: -20px">Numbers</h1>
-            <br /><span style="font-size: .8em"
-              >By Michell Cronberg - for use in traning</span
-            >
+            <br /><span style="font-size: 0.8em"> By Michell Cronberg - for use in traning </span>
           </td>
-          <td></td>
+          td>div.menu
         </tr>
       </table>
     </div>
@@ -120,8 +118,7 @@
     </div>
     <div>
       <h2 id="hex">
-        Hexadecimal (base 16) - values = 0-15 (0-9 + A=10, B=11, C=12, D=13,
-        E=14, F=15)
+        Hexadecimal (base 16) - values = 0-15 (0-9 + A=10, B=11, C=12, D=13, E=14, F=15)
       </h2>
       <input type="text" id="txtBase16" placeholder="hexadecimal value" />
       <table id="tblBase16">
